# xommons

./: README.md  meta.yaml  pyproject.toml  requirements.txt  setup.py  setup.sh
.github/workflows/: pypi_publish.yml
demos/: propagation_through_thin_disk.py
macros/: convert_json_to_images_and_texts  dumpmat  gather_tiffs  hdf2tiff  npy2tiff  npz2tiff  plot_mat  showh5  showimg  showprobe  showptychodus  summarize_mat  unwrap_phase
xommons/: __init__.py  analysis.py  constants.py  io.py  optics.py  phys.py  plot.py  propagation.py  util.py
xommons/tools/: _image.py  convert_json_to_images_and_texts.py  dumpmat.py  gather_tiffs.py  main.py  npy2tiff.py  npz2tiff.py  plot_mat.py  showh5.py  showimg.py  showprobe.py  showptychodus.py  summarize_mat.py  unwrap_phase.py
