[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "xommons"
version = "0.1.0"
description = "Synchrotron data analysis utilities and command-line macros."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.15.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "tifffile>=2025.10.16",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
unwrap-phase = [
    "ptychi>=1.3.0",
    "torch>=2.9.0",
]

[project.scripts]
xommons = "xommons.tools.main:main"
